--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -2,7 +2,7 @@ name: Required Files Check (PR - Beta)
 
 on:
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   required-files-check:
@@ -12,7 +12,7 @@ jobs:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      LOG_GROUP_NAME: ${{ secrets.LOG_GROUP_NAME }} # points to beta group from secrets
+      LOG_GROUP_NAME: ${{ secrets.LOG_GROUP_NAME }}  # points to beta group from secrets
 
     steps:
       - name: Checkout repository
@@ -26,10 +26,9 @@ jobs:
       - name: Run required files check
         run: python3 check_required_files.py
 
-      - name: Install AWS CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+      # Just verify AWS CLI is available on the runner
+      - name: Check AWS CLI version
+        run: aws --version
 
       # This step only runs if the previous steps succeeded
       - name: Log success to CloudWatch (beta)
@@ -39,7 +38,7 @@ jobs:
 
           # Create a log group and stream if they don't exist
           aws logs create-log-group --log-group-name "$LOG_GROUP_NAME" || true
-          aws logs create-log-stream --log-group-name "$LOG_GROUP_NAME" --LOG-STREAM-NAME "$LOG_STREAM_NAME" || true
+          aws logs create-log-stream --log-group-name "$LOG_GROUP_NAME" --log-stream-name "$LOG_STREAM_NAME" || true
 
           # Build a simple JSON message using jq (already installed on GitHub runners)
           MESSAGE=$(jq -n \
