--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -34,28 +34,16 @@ jobs:
       - name: Log success to CloudWatch (prod)
         if: success()
         run: |
-          LOG_STREAM_NAME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          LOG_STREAM_NAME=$(date -u +"%Y-%m-%dT%H-%M-%SZ")
 
           aws logs create-log-group --log-group-name "$LOG_GROUP_NAME" || true
           aws logs create-log-stream --log-group-name "$LOG_GROUP_NAME" --log-stream-name "$LOG_STREAM_NAME" || true
 
-          MESSAGE=$(jq -n \
-            --arg workflow "${{ github.workflow }}" \
-            --arg sha "${{ github.sha }}" \
-            --arg actor "${{ github.actor }}" \
-            --arg event "${{ github.event_name }}" \
-            --arg branch "${{ github.ref_name }}" \
-            --arg repo "${{ github.repository }}" \
-            '{
-              workflow: $workflow,
-              commit_sha: $sha,
-              actor: $actor,
-              event_name: $event,
-              branch: $branch,
-              repository: $repo
-            }')
+          MESSAGE="workflow=${{ github.workflow }}, commit_sha=${{ github.sha }}, actor=${{ github.actor }}, event_name=${{ github.event_name }}, branch=${{ github.ref_name }}, repository=${{ github.repository }}"
+
+          TIMESTAMP_MS=$(date +%s%3N)
 
           aws logs put-log-events \
             --log-group-name "$LOG_GROUP_NAME" \
             --log-stream-name "$LOG_STREAM_NAME" \
-            --log-events "[{\"timestamp\": $(date +%s%3N), \"message\": \"$MESSAGE\"}]"
+            --log-events "[{\"timestamp\": ${TIMESTAMP_MS}, \"message\": \"${MESSAGE}\"}]"
