--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Log success to CloudWatch (beta)
         if: success()
         run: |
-          # CloudWatch log stream names can't contain colons, so use dashes in the time
+          # Use dashes instead of colons so it's a valid CloudWatch logStreamName
           LOG_STREAM_NAME=$(date -u +"%Y-%m-%dT%H-%M-%SZ")
 
           # Create log group and stream if they don't already exist
