--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -22,6 +22,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+          
+      - name: Install dependencies
+        run: pip install pyyaml
 
       - name: Run required files check
         run: python3 check_required_files.py
