--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: pip install pyyaml pytest
 
+      - name: Run unit tests
+        run: pytest
+
       - name: Run required files check
         run: python3 check_required_files.py
 
